@startuml

title __HOME's Class Diagram__\n

  namespace edu.temple.homerecognition {
    namespace ui.home {
      class edu.temple.homerecognition.ui.home.HomeFragment {
          + onCreateView()
      }
    }
  }
  

  namespace edu.temple.homerecognition {
    namespace ui.home {
      class edu.temple.homerecognition.ui.home.HomeViewModel {
          - mText : MutableLiveData<String>
          + HomeViewModel()
          + getText()
      }
    }
  }
  

  edu.temple.homerecognition.ui.home.HomeFragment -up-|> androidx.fragment.app.Fragment
  edu.temple.homerecognition.ui.home.HomeFragment o-- edu.temple.homerecognition.ui.home.HomeViewModel : homeViewModel
  edu.temple.homerecognition.ui.home.HomeViewModel -up-|> androidx.lifecycle.ViewModel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
